[project]
requires-python = ">=3.8"
version = "2.0.0"
name = "astrapy"
description = "AstraPy is a Pythonic SDK for DataStax Astra and its Data API"
authors = [
    {"name" = "Stefano Lottini", "email" = "stefano.lottini@datastax.com"},
    {"name" = "Eric Hare", "email" = "eric.hare@datastax.com"},
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["DataStax", "Astra"]
homepage = "https://github.com/datastax/astrapy"
repository = "https://github.com/datastax/astrapy"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry]
version = "2.0.0"
name = "astrapy"
description = "AstraPy is a Pythonic SDK for DataStax Astra and its Data API"
authors = [
    "Stefano Lottini <stefano.lottini@datastax.com>",
    "Eric Hare eric.hare@datastax.com>",
]
readme = "README.md"
packages = [
    { include = "astrapy" }
]

[tool.poetry.dependencies]
python = "^3.8.0"
deprecation = "~2.1.0"
toml = "^0.10.2"
uuid6 = ">=2024.1.12"
pymongo = ">=3"
httpx = { version=">=0.25.2,<1", extras=["http2"] }
typing-extensions = ">=4.0"

[tool.poetry.group.dev.dependencies]
faker = "~23.1.0"
mypy = "~1.9.0"
pre-commit = "~3.5.0"
pytest-asyncio = "~0.23.5"
pytest-cov = "~4.1.0"
pytest-testdox = "~3.1.0"
pytest = "~8.0.0"
python-dotenv = "~1.0.1"
pytest-httpserver = "~1.0.8"
testcontainers = "~3.7.1"
ruff = "^0.6.8"
types-toml = "^0.10.8.7"
blockbuster = "~1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "FA", "I", "UP"]

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
addopts = "-v --cov=astrapy --testdox --cov-report term-missing"
asyncio_mode = "auto"
log_cli = 1
log_cli_level = "INFO"
